--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,16 +1,48 @@
 {
-    "name": "My Vite React Extension",
+    "name": "webridge | KWCAG 접근성 검사 도구",
+    "description": "KWCAG 접근성 검사 도구",
     "version": "1.0",
     "manifest_version": 3,
+    "host_permissions": [
+      "*://*/*"
+    ],
     "action": {
-      "default_popup": "index.html"
+      "default_popup": "index.html",
+      "default_icon": {
+        "16": "images/icon-16.png",
+        "32": "images/icon-32.png",
+        "48": "images/icon-48.png",
+        "128": "images/icon-128.png"
     },
     "background": {
       "service_worker": "background.js"
     },
+    "web_accessible_resources": [
+      {
+        "matches": ["<all_urls>"]
+      }
+    ],
+    "icons": {
+      "16": "images/icon-16.png",
+      "32": "images/icon-32.png",
+      "48": "images/icon-48.png",
+      "128": "images/icon-128.png"
+    },
+    "content_scripts": [
+      {
+        "matches": ["<all_urls>"],
+        "js": ["content.js"]
+      }
+    ],
     "permissions": [
-      "storage",
+      "tabs",
       "activeTab",
-      "tabs"
+      "webRequest",
+      "webNavigation",
+      "storage",
+      "cookies",
+      "scripting",
+      "*://*/*"
     ]
   }
+}
